_slicing/src/css/main.scss
/* ... */
.attitude {
	background: #f9f9f9;

	.grid-container .grid-x .cell {
		h4 {
			color:  #212121;
			@include font-size(32);
			font-weight: 800;
			line-height: 34px;
		}

		&.checkmark-green {
			ul {
				li:before {
					content: ' ';
					float: left;
					margin-top: 3px;
					margin-left: -2.5rem;
					width: 1.563rem;
					height: 1.563rem;
					display: block;
					@include checkmark-svg(#9bdda0);
				}
			}
		}
	}
}
.contact {
	padding: 0 50px;
	@include background(-139deg, 229deg, #86ddcd, 20%, #b4db63, 80%);
	.grid-container {
		width: $container-xlarge;
		margin: 0 auto;
		.grid-x {
			.small-5 {
				padding-top: 144px;
				h4 {
					color: rgb(158, 218, 127);
					z-index: 1;

					&.above {
						color: white;
						margin-top: -3.45rem;
					}
				}
				p {
					padding-top: 30px;
					color: white;
					@include font-size(20);
					font-weight: 500;
					text-align: left;
					text-shadow: 0px 1px 2px rgba(113, 149, 39, 0.23);
					padding-right: 20px;
				}
				span {
					content: ' ';
					float: right;
					width: 100px;
					height: 100px;
					display: block;
					background: url("../graphics/svg/noun_864507.svg") center center no-repeat;
					transform: rotate(120deg) scaleX(-1);
					margin-top: -10px;
					margin-right: -10px;
				}
			}
			.small-7 {
				border-radius: 3px;
				background-color: white;
				box-shadow: 0px 2px 4px 0px rgba(46, 46, 46, 0.1);
				margin-top: 100px;
				position: relative;
				margin-bottom: 100px;
				text-align: center;
				.callout {
					position: absolute;
					width: 100%;
					height: 100px;
					padding-top: 30px;
				}
				h4 {
					padding-top: 2.5rem;
					color: #272727;
					text-align: center;
					display: inline-block;

					&:after {
						content: "";
						border-bottom: 0.625rem solid #eff8dd;
						display: block;
						margin-top: -13px;
					}
				}

				form {
					label {
						font-size: 1.125rem;
						color: rgb(81, 80, 80);
						padding-bottom: 13px;
						text-align: left;
					}
					input {
						border-radius: 3px;
						background-color: rgb(245, 245, 245);
						height: 39px;
						margin-top: 0;
						margin-left: auto;
						margin-right: auto;
						margin-bottom: 13px;
						border: none;
					}
					input, textarea {
						background-image: linear-gradient(-90deg, #77d5cd 0%, #92ddb3 100%);
						background-repeat: no-repeat;
						background-position: 0 calc(100% + 4px), 0 0;
						background-size: 100% 4px;
						box-shadow: none;
						border-bottom: 5px solid #77d5cd;
						border-color: transparent;
					}
					select {
						border-bottom: 3px solid #77d5cd;
						border-left: none;
						border-right: none;
						border-top: none;

						&:after {
							content:"";
						    position:absolute;
						    z-index:2;
						    right:8px;
						    top:50%;
						    margin-top:-3px;
						    height:0;
						    width:0;
						    border-top:6px solid #f99300;
						    border-left:6px solid transparent;
						    border-right:6px solid transparent;
						    pointer-events:none;
						}
					}
					select, textarea {
						margin-top: 13px;
						border-radius: 3px;
						background-color: rgb(245, 245, 245);
					}
					textarea {
						resize: none;
					}

					.plain-select:after{
					    content:"";
					    position:absolute;
					    z-index:2;
					    right:8px;
					    top:50%;
					    margin-top:-47px;
					    right: 30px;
					    height:0;
					    width:0;
					    border-top:6px solid #89DDCD;
					    border-left:6px solid transparent;
					    border-right:6px solid transparent;
					    pointer-events:none;
					}
					
					.buttons {
						padding-top: 30px;
						.circle {
							border-radius: 50%;
							background: #7364f5;
							display: block;
							position: absolute;
							&:hover {
								background: darken(#7364f5, 5%);
							}
						}
						.prev {
							.circle {
								width: 3rem;
								height: 3rem;
								line-height: 3rem;
								bottom: -1.5rem;
								left: calc(50% - 2.5rem);
								margin-left: -3rem;
							}
							img {
								width: 1.688rem;
								height: 1.688rem;
								margin-left: -0.46rem;
							}
						}
						.next {
							.circle {
								width: 4.5rem;
								height: 4.5rem;
								line-height: 4.5rem;
								bottom: -2.25rem;
								left: calc(50% - 2.25rem);
							}
							img {
								transform: scaleX(-1);
								width: 2.625rem;
								height: 2.625rem;
								margin-left: 0.425rem;
							}
						}
						.submit {
							&.circle {
								width: 4.5rem;
								height: 4.5rem;
								line-height: 4.5rem;
								bottom: -2.25rem;
								left: calc(50% - 2.25rem);
							}
							img {
								width: 2.625rem;
								height: 2.625rem;
								margin-left: -0.5rem;
							}
						}
					}
				}
				form.multi-form {
					padding: 20px;
					fieldset:not(.active) {
						display: none;
					}
					fieldset.active:first-of-type~.buttons {
						.prev, .submit {
							display: none;
						}
					}
					fieldset.active:not(:last-of-type)~.buttons {
						.submit {
							display: none;
						}
					}
					fieldset.active:last-of-type~.buttons {
						.next {
							display: none;
						}
					}
				}
			}
		}
	}
}
/* ... */

